<resources>
    <string name="app_name">West Van Surf Report</string>

    <string name="action_settings">Settings</string>
    <string name="clear_data">Clear data</string>
    <string name="alarm_on">ALARM ON</string>
    <string name="alarm_off">ALARM OFF</string>
    <string name="westvansurf">West Vancouver Surf Report</string>
    <string name="provider_prompt">Choose a cell provider</string>
    <string name="application_settings"><u>Application Settings</u></string>
    <string name="surfgrade"><u>Weighted Surf Grade</u></string>
    <string name="service_provider"><u>Service Provider</u></string>
    <string name="cell_number"><u>Cell #</u></string>
    <string name="wind_direction"><u>Wind Direction</u></string>
    <string name="wind_speed"><u>Wind Speed</u></string>
    <string name="wave_height"><u>Wave Height</u></string>
    <string name="allow">Don\'t allow the user access</string>
    <string name="dont_allow">Allow the user access</string>
    <string name="application_error">Application error: %1$s</string>
    <!-- Unlicensed dialog messages -->
    <string name="unlicensed_dialog_title">Application not licensed</string>
    <string name="unlicensed_dialog_body">This application is not licensed. Please purchase it from Android Market.</string>
    <string name="buy_button">Buy app</string>
    <string name="quit_button">Exit</string>


    <string-array name="cell_service_providers">
        <item>Telus</item>
        <item>Rogers</item>
        <item>Bell</item>
        <item>Fido</item>
        <item>Freedom</item>
        <item>Koodo</item>
    </string-array>

</resources>
