<?xml version="1.0" encoding="utf-8"?>



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
    android:background="@drawable/wvsurf_scott_background">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/application_settings"
            android:id="@+id/textView2"
            android:layout_gravity="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Enter the Gmail account information to be used for send of e-mail to text message notifications."
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />




    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="G-mail:"
                android:id="@+id/textView4" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/etprimary_email"
                android:background="@drawable/edittext_bg"
                android:text="somebody@gmail.com"
                android:textColor="#000000"
                android:textSize="14dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:ems="10"
                android:selectAllOnFocus="true"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Password:"
                android:id="@+id/textView5" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/etprimary_password"
                android:background="@drawable/edittext_bg"
                android:password="true"
                android:text="Password"
                android:textColor="#000000"
                android:textSize="14dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:ems="10"
                android:selectAllOnFocus="true"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Enter the ten digit phone number and cell service provider for users who will receive surf report text message notificatons."
        android:id="@+id/textView6"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />


    <TableLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/cell_number"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/service_provider"
            android:textStyle="bold" />
    </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|phone"
                android:id="@+id/etphone_number1"
                android:background="@drawable/edittext_bg"
                android:textColor="#000000"
                android:textSize="14dp"
                android:maxLength="10"
                android:ems="6"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:selectAllOnFocus="true"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner1"
                android:entries="@array/cell_service_providers"
                style="@style/SpinnerTextViewItem"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|phone"
                android:id="@+id/etphone_number2"
                android:background="@drawable/edittext_bg"
                android:textColor="#000000"
                android:textSize="14dp"
                android:maxLength="10"
                android:ems="6"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:selectAllOnFocus="true"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner2"
                android:entries="@array/cell_service_providers"
                style="@style/SpinnerTextViewItem"/>
        </TableRow>


    </TableLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Send Text Messages"
            android:id="@+id/cb_SetUp"
            android:checked="true"
            android:background="@drawable/edittext_bg"
            android:textSize="14dp"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/surfgrade"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="10dp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/wind_direction"
                android:id="@+id/textView8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView15"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/wind_speed"
                android:id="@+id/textView9"
                android:layout_column="3"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView16"
                android:layout_column="4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/wave_height"
                android:id="@+id/textView10"
                android:layout_marginLeft="5dp"
                android:layout_column="5" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/etsurfcalc_winddir"
                android:background="@drawable/edittext_bg"
                android:maxLength="2"
                android:ems="2"
                android:textColor="#000000"
                android:textSize="14dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:gravity="center_horizontal"
                android:selectAllOnFocus="true"
                android:text="30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="%"
                android:id="@+id/textView13"
                android:layout_column="2" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/etsurfcal_windspd"
                android:background="@drawable/edittext_bg"
                android:maxLength="2"
                android:ems="2"
                android:textColor="#000000"
                android:textSize="14dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:gravity="center_horizontal"
                android:layout_column="3"
                android:layout_marginLeft="5dp"
                android:selectAllOnFocus="true"
                android:text="30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="%"
                android:id="@+id/textView"
                android:layout_column="4" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/etsurfcsl_waveht"
                android:background="@drawable/edittext_bg"
                android:maxLength="2"
                android:ems="2"
                android:textColor="#000000"
                android:textSize="14dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:gravity="center_horizontal"
                android:layout_column="4"
                android:layout_marginLeft="5dp"
                android:selectAllOnFocus="true"
                android:text="40" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="%"
                android:id="@+id/textView14"
                android:layout_column="7" />
        </TableRow>



    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Sound the alarm when the surf grade hits"
            android:id="@+id/textView11" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etsurfgrade"
            android:background="@drawable/edittext_bg"
            android:textColor="#000000"
            android:textSize="14dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:inputType="number"
            android:maxLength="3"
            android:ems="3"
            android:gravity="center_horizontal"
            android:selectAllOnFocus="true"
            android:text="80" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="%."
            android:id="@+id/textView12" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="(Optimal parameter values: westerly wind (270°-315°), wind speed: 15 Kt, wave Ht: 2.5 ft/0.8 m)"
        android:id="@+id/textView17"
        android:textStyle="italic"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp">


        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Update"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:id="@+id/bsettings_update"
                android:textColor="#ffffffff" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Clear"
                android:id="@+id/bsettings_cleardata"
                android:layout_marginLeft="10dp"
                android:textColor="#ffffffff" />

    </LinearLayout>


</LinearLayout>